--- a/action.yml
+++ b/action.yml
@@ -60,11 +60,14 @@ runs:
         # Add the remote upstream
         git remote add upstream "https://${{ inputs.github_token }}@github.com/${GITHUB_REPOSITORY}.git"
 
-        # Checkout new branch
-        git checkout -b "${BRANCH_NAME:?}"
-
         # Fetch remote (if it exists)
-        git fetch -u upstream "${BRANCH_NAME:?}:${BRANCH_NAME:?}" || true
+        git fetch upstream
+        if ! git show-ref --verify --quiet "refs/heads/${BRANCH_NAME:?}"; then
+          echo "Branch ${BRANCH_NAME:?} does not exist. Creating it."
+          git checkout --orphan "${BRANCH_NAME:?}"
+        else
+          git checkout "${BRANCH_NAME:?}"
+        fi
 
         # Commit to branch
         git config --local user.name "GitHub Actions"
